did some styling on login and plantList, fix some routing issues

--- a/plants/src/components/login.css
+++ b/plants/src/components/login.css
@@ -1,47 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.link {
-  text-decoration: none;
-  color: black;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -130,7 +86,7 @@ audio,
 video {
   margin: 0;
   padding: 0;
-  border: 0;
+  border: 1px solid red;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
@@ -151,11 +107,6 @@ section {
 }
 body {
   line-height: 1;
-  background-color: linear-gradient(
-    180deg,
-    rgba(160, 214, 180, 1) 9%,
-    rgba(255, 255, 255, 1) 100%
-  );
 }
 ol,
 ul {
@@ -175,4 +126,7 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+p {
+  font-family: "Courgette", cursive;
 }
